--- a/google/index.html
+++ b/google/index.html
@@ -3,4 +3,5 @@
     <input type="text">
     <button>Google Search</button>
     <button>I'm feeling lucky</button>
+    <p>We protect your privacy. <a href="blog.html">Learn more.</a></p>
 </div>
