feat: 13. Build a Personal Website

--- a/google/blog.html
+++ b/google/blog.html
@@ -1,2 +1,10 @@
-<h1>Not much to see here</h1>
-<p>Return back to <a href="index.html">Google.</a></p>
+<!DOCTYPE html>
+<html>
+    <head>
+    </head>
+    <body>
+        <h1>Not much to see here</h1>
+        <p>Return back to <a href="index.html">Google.</a></p>
+    </body>
+</html>
+
