--- a/google/index.html
+++ b/google/index.html
@@ -1,7 +1,14 @@
-<div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/330px-Google_2015_logo.svg.png">
-    <input type="text">
-    <button>Google Search</button>
-    <button>I'm feeling lucky</button>
-    <p>We protect your privacy. <a href="blog.html">Learn more.</a></p>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+
+    <body>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/330px-Google_2015_logo.svg.png">
+        <input type="text">
+        <button>Google Search</button>
+        <button>I'm feeling lucky</button>
+        <p>We protect your privacy. <a href="blog.html">Learn more.</a></p>
+    </body>
+</html>
