--- a/css/google/index.html
+++ b/css/google/index.html
@@ -7,7 +7,7 @@
     <div class="main">
         <img class="logo-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1280px-Google_2015_logo.svg.png">
         <input class="search-input" type="text">
-        <div>
+        <div class="btn-wrapper">
             <button class="btn">Google Search</button>
             <button class="btn">I'm Feeling Lucky</button>
         </div>
