feat: 14. Add colors

--- a/business-card/index.html
+++ b/business-card/index.html
@@ -3,15 +3,14 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div class="card dotted-border">
-            <img src="images/per.png" alt="Per Borgen smiling" class="avatar dotted-border">
-            <div class="dotted-border">
+        <div class="card">
+            <img src="images/per.png" alt="Per Borgen smiling" class="avatar">
+            <div>
                 <h3>Per Harald Borgen</h3>
                 <div class="text-center">
                     <p>Frontend Developer</p>
                     <h4>Oslo, Norway</h4>
                 </div>
-                
             </div>
         </div>
     </body>
