--- a/space-exploration/index.html
+++ b/space-exploration/index.html
@@ -6,7 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Join the exploration</h1>
+        <img src="image/spacex.png" id="main-logo">
+        <h1>Join the <span class="exploration">exploration</span></h1>
         <button class="btn">Apply</button>
     </body>
 </html>
